--- a/main.html
+++ b/main.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<div>
+		<h3>what is the capital of india?</h3>
+	</div>
 </body>
-
-</html>
